# Proyecto1_BattleSpace

./: Bullet.cpp  Bullet.h  CMakeLists.txt  Collector.cpp  Collector.h  Dificil.cpp  Dificil.h  Enemy.cpp  Enemy.h  EnemyR.cpp  EnemyR.h  Estrategia1.xml  Estrategia2.xml  Estrategia3.xml  Estrategia4.xml  Estrategias.cpp  Estrategias.h  Estrategias.hpp  Facil.cpp  Facil.h  Medio.cpp  Medio.h  Menu.cpp  Menu.h  Player.cpp  Player.h  main.cpp
